welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: Missing closing brace `}' assumed here
}
^ZigZag:4: error: expected class or object definition
def doTheSnakyThing() {
^